1.6a
------

- Added 1 new service:
    - GameSpot

- Revised 2 services:
    - Dailymotion (also updated Dailymotion icon)
    - Yuvutu

- Fixed bug (Error: fixed POST and GET methods in http class)
- Fixed bug (Error: invalid version compare rutine)

- Revised Polish (PL) language file

1.5a
----

- Added "Credits" form
- Added "Error Report" module
- Added 5 new services:
    - Tu.tv
    - Shufuni
    - Spike
    - MySpaceTv
    - CinemaVIP

- Revised 1 service:
    - Yahoo! Videos

- Changed "Proxy Port" max. value from "4999" to "9999"
- Changed "Proxy password" "Echo mode -> normal" to "Echo mode -> Password"
- Changed "xUpdater is missing" warning message, now is only displayed the first time (and not on each executation)

- Fixed bug (Error: when the xUpdater was missing, the videos were not downloaded)
- Fixed bug (Error: downloads directory modified in main form was not saved)
- Fixed bug (Error: some downloaded videos were corrupted by stupid http class bug)
- Fixed bug (Error: the button "check for updates" in Options is now deactivated if xUpdater is missing)
- Fixed bug (Error: Application updates didn't work!!! ***SHAME***)
- Fixed bug (Error: xUpdater was not launched as "detached process"!!! ***SHAME***)
- Fixed bug (Error: the "Checking updates" closed by "X" didn't cancel the update process)
- Fixed bug (Error: the "Update center" closed by "X" didn't cancel the update process)

- Improved "URL" validation functions
- Improved "Updates", Dynamic version will download the correspondent "Dynamic xVST" (and not the static version)

Windows:
--------

- Added Program Version information (.RC)

Linux:
------

- Fixed bug (Error: "Play video" did not work, file not found error was raised)
- Fixed bug (Error: "Open downloads directory" did not work, some dist. did not open the directory)

- Changed executable name to "xvst"

Mac OS X:
---------

- Improved all dialogs

- Changed "Downloads Directory" default dir (to usr/{name}/downloads)