@@ -76,5 +76,6 @@
         <file>images/services/videos.cinemavip.com.png</file>
         <file>images/services/video.yahoo.com.png</file>
         <file>images/services/gamespot.com.png</file>
+        <file>images/services/stage6.com.png</file>
     </qresource>
 </RCC>
