@@ -178,6 +178,7 @@ MainFormImpl::MainFormImpl(QWidget * parent, Qt::WFlags f)
 	videoList->addVideo("http://videos.cinemavip.com/informaciondecontenido.php?con=3015");
 	videoList->addVideo("http://video.yahoo.com/video/play?vid=1899050&fr=&cache=1");
 	videoList->addVideo("http://www.gamespot.com/video/943596/6185607/turok-official-trailer-2");
+	videoList->addVideo(video "http://www.stage6.com/Shutdown/video/2010536/-/shutdown-1x06:-DDR-Hero-(part-3-of-4)---720-HD");
 */
 
 /*
