@@ -206,7 +206,7 @@ xVideoServiceThief also provide you the ability to convert each video in most po
       <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
 &lt;/style>&lt;/head>&lt;body style=" font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;">
-&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8pt;">&lt;span style=" font-family:'Arial'; font-size:large;">Total websites supported (05/02/2008): &lt;/span>&lt;span style=" font-family:'Arial'; font-size:large; font-weight:600;">35&lt;/span>&lt;span style=" font-family:'Arial'; font-size:large;"> &lt;/span>&lt;/p>
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px; font-size:8pt;">&lt;span style=" font-family:'Arial'; font-size:large;">Total websites supported (14/02/2008): &lt;/span>&lt;span style=" font-family:'Arial'; font-size:large; font-weight:600;">37&lt;/span>&lt;span style=" font-family:'Arial'; font-size:large;"> &lt;/span>&lt;/p>
 &lt;ul style="-qt-list-indent: 1;">&lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:12px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">123video &lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">5min &lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">aBum &lt;/span>&lt;/li>
@@ -219,6 +219,7 @@ p, li { white-space: pre-wrap; }
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">Clip4e &lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">Dailymotion &lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">Dumpalink &lt;/span>&lt;/li>
+&lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">GameSpot&lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">Glumbert &lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">Google Video &lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">LiveVideo &lt;/span>&lt;/li>
@@ -227,6 +228,7 @@ p, li { white-space: pre-wrap; }
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">MySpaceTv&lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">Sclipo &lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">Spike&lt;/span>&lt;/li>
+&lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">Stage6&lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">Tu.tv&lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">Video.ca &lt;/span>&lt;/li>
 &lt;li style=" font-family:'Arial'; font-size:8pt;" style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;span style=" font-size:large;">VideoLeak &lt;/span>&lt;/li>
